--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
                 <div class="cta-buttons">
                     <a href="#projects" class="cta-button">See My Solutions</a>
-                    <a href="Images/Miriam_Uwingabiye_resume.pdf" class="cta-button secondary" target="_blank">Download CV</a>
+                    <a href="Miriam_Uwingabiye_resume.pdf" class="cta-button secondary" target="_blank">Download CV</a>
 
                 </div>
             </div>
@@ -46,7 +46,7 @@
 <!-- About Section with Circular Photo -->
 <section id="about" class="section">
     <div class="about-container">
-        <img src="Images/Miriam.png" alt="Miriam Uwingabiye" class="about-photo">
+        <img src="Miriam.png" alt="Miriam Uwingabiye" class="about-photo">
         <div class="about-content">
             <h2 class="about-title">About Me</h2>
             <div class="about-cards-container">
@@ -504,7 +504,7 @@
                 <!-- University Education -->
                 <div class="education-card">
                     <div class="education-header">
-                        <img src="Images/ashesiLogo.png" alt="Ashesi University Logo" class="education-logo">
+                        <img src="ashesiLogo.png" alt="Ashesi University Logo" class="education-logo">
                         <div class="education-title">
                             <h3>Ashesi University</h3>
                             <p class="education-period">
@@ -551,7 +551,7 @@
                 <!-- Gashora Girls Academy of Science and Technology Education -->
                 <div class="education-card">
                     <div class="education-header">
-                        <img src="Images/GashoraLogo.png" alt="Gashora Girls Academy Logo" class="education-logo">
+                        <img src="GashoraLogo.png" alt="Gashora Girls Academy Logo" class="education-logo">
                         <div class="education-title">
                             <h3>Gashora Girls Academy</h3>
                             <p class="education-period">
